src/test/ui/borrowck/issue-46471-1.stderr
error[E0597]: `z` does not live long enough
  --> $DIR/issue-46471-1.rs:4:9
   |
LL |         &mut z
   |         ^^^^^^
   |         |
   |         borrowed value does not live long enough
   |         borrow later used here
LL |     };
   |     - `z` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
